--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,6 +19,7 @@
     "jwt-decode": "^4.0.0",
     "luxon": "^3.6.1",
     "md5": "^2.3.0",
+    "my-app": "file:",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
     "react": "^19.1.0",
