--- a/my-app/package.json
+++ b/my-app/package.json
@@ -31,6 +31,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/jwt-decode": "^2.2.1",
     "@types/md5": "^2.3.5",
     "@types/node": "^20",
     "@types/react": "^19",
